# ComputeOS

./: .gitignore  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_RELEASE_REPORT.md  MAINTAINER_CHARTER.md  README.md  REFACTORING_PLAN.md  RELEASE_AUDIT.md  RELEASE_CHECKLIST.md  RESEARCH_ROADMAP.md  RFC_COMPUTEOS_V2.md  ROADMAP.md  SECURITY.md  TECHNICAL_DEBT.md  V1_RELEASE_IMPLEMENTATION_PLAN.md  demo.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: confidence_early_exit.md  roadmap_item.md
.github/workflows/: ci.yml
conf/: config.yaml
conf/benchmark/: perplexity.yaml  prompt_smoke.yaml  wikitext_perplexity.yaml
conf/execution/: default.yaml
docs/: architecture.md  benchmarking.md  counterfactual_runtime_intelligence.md  diagrams.md  predictive_value_scheduling.md  quickstart.md  research_roadmap.md  runtime_enforcement.md  scheduler_guide.md
examples/: calibrate_pvs.py  calibrate_pvs_from_oracle.py  compare_schedulers.py  custom_scheduler.py  diagnose_pvs.py  measure_oracle_gap.py  run_cri_demo.py  run_pvs_tiny_gpt2.py  run_tiny_gpt2.py  sweep_latency_quality.py  validate_cri.py
paper/: README.md  paper.md  references.bib
tests/: test_artifacts.py  test_benchmarks.py  test_comparison.py  test_controlled_runtime.py  test_hf_controlled.py  test_hooks.py  test_oracle_gap.py  test_pareto.py  test_pvs_calibration.py  test_pvs_scheduler.py  test_replay_cri.py  test_scheduler.py  test_scheduler_contract.py  test_telemetry_outputs.py  test_telemetry_stats.py
(+60 files in other folders)
