[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "computeos"
version = "1.0.0"
description = "A modular research framework for dynamic inference compute scheduling in transformer models."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "ComputeOS Contributors" }]
dependencies = [
  "torch>=2.3",
  "transformers>=4.56",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "wandb>=0.17",
  "numpy>=1.26",
  "psutil>=5.9",
  "pydantic>=2.7",
  "rich>=13.7",
]

[project.optional-dependencies]
benchmarks = [
  "datasets>=2.20",
]
visualization = [
  "matplotlib>=3.8",
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "datasets>=2.20",
  "matplotlib>=3.8",
]

[project.scripts]
computeos-run = "computeos.experiments.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/computeos"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["computeos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
